--- a/src/app/detalles-orden/ver-detalle/ver-detalle.component.scss
+++ b/src/app/detalles-orden/ver-detalle/ver-detalle.component.scss
@@ -1,14 +1,19 @@
 table {
-    width: 100%
+    width: 50% ;
+    margin: auto;
+    border-radius: .2rem;
   }
   table,
   th,
   td {
-    border: 1px solid black;
+    
+    border: 2px solid black;
     border-collapse: collapse;
   }
   th,
   td {
+    font-size: large;
+    background-color:rgb(198, 231, 241);
     padding: 5px;
     text-align: left;
   }
