Una vista que contenga un formulario que registre/edite/elimine un proveedor y component regist-product

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<button class="btn btn-primary"> Hola</button>
+
+<a class="btn btn-primary " data-bs-toogle="modal" data-bs-targe="modal-register" routerLink="/provider">Registrar-Proveedor</a>
+<a class="btn btn-primary ml-4" routerLink="/listProvider">proveedor</a>
+<a class="btn btn-primary ml-4" routerLink="/product">Registrar Producto</a>
+
+<router-outlet></router-outlet>
