--- a/src/app/ordenes-compra/edit-purchase-order/edit-purchase-order.component.html
+++ b/src/app/ordenes-compra/edit-purchase-order/edit-purchase-order.component.html
@@ -2,39 +2,37 @@
     <div class="row">
       <div class="col-sm-8 offset-sm-2">
         <div>
-          <form>
+          <form [formGroup]="form" (ngSubmit)="editOrder()">
             <div class="form-group">
-              <label for="id">ID</label>
-              <input [(ngModel)]="order.id" [type="text" name="id" class="form-control" id="id" aria-describedby="idHelp" >
-              <small id="idHelp" class="form-text text-muted">Enter your contact’s ID</small>
-  
+              
               <label for="name">Estado</label>
-              <input [(ngModel)]="order.state" type="text" name="name" class="form-control" id="name" aria-describedby="nameHelp">
+              <input formControlName="state" type="text" name="state" class="form-control" id="name" aria-describedby="nameHelp">
               <small id="nameHelp" class="form-text text-muted">Enter your contact’s name</small>
   
               <label for="name">Tipo de recepcion</label>
-              <input [(ngModel)]="order.receivedType" type="text" name="name" class="form-control" id="name" aria-describedby="nameHelp">
+              <input formControlName="receivedType" type="text" name="receivedType" class="form-control" id="name" aria-describedby="nameHelp">
               <small id="nameHelp" class="form-text text-muted">Enter your contact’s name</small>
 
               <label for="name">Estado del pago</label>
-              <input [(ngModel)]="order.paymentStatus" type="text" name="name" class="form-control" id="name" aria-describedby="nameHelp">
+              <input formControlName="paymentStatus" type="text" name="paymentStatus" class="form-control" id="name" aria-describedby="nameHelp">
               <small id="nameHelp" class="form-text text-muted">Enter your contact’s name</small>
 
               <label for="name">Monto total</label>
-              <input [(ngModel)]="order.totalAmount" type="text" name="name" class="form-control" id="name" aria-describedby="nameHelp">
+              <input formControlName="totalAmount" type="text" name="totalAmount" class="form-control" id="name" aria-describedby="nameHelp">
               <small id="nameHelp" class="form-text text-muted">Enter your contact’s name</small>
 
               <label for="name">Monto del balance</label>
-              <input [(ngModel)]="order.balanceAmount" type="text" name="name" class="form-control" id="name" aria-describedby="nameHelp">
+              <input formControlName="balanceAmount" type="text" name="balanceAmount" class="form-control" id="name" aria-describedby="nameHelp">
               <small id="nameHelp" class="form-text text-muted">Enter your contact’s name</small>
 
               <label for="name">Cantidad del producto</label>
-              <input [(ngModel)]="order.amountProduct" type="text" name="name" class="form-control" id="name" aria-describedby="nameHelp">
+              <input formControlName="amountProduct" type="text" name="amountProduct" class="form-control" id="name" aria-describedby="nameHelp">
               <small id="nameHelp" class="form-text text-muted">Enter your contact’s name</small>
 
             </div>
+            <button class="btn btn-primary" type="submit" [routerLink]="['/orderNoEnd-list']">Edit orden</button>
           </form>
-          <button class="btn btn-primary" (click)="editOrder()" [routerLink]="['/orderNoEnd-list']">Edit orden</button>
+          
         </div>
       </div>
     </div>
