--- a/src/app/ordenes-compra/list-purchase-orden-no-end/list-purchase-orden-no-end.component.html
+++ b/src/app/ordenes-compra/list-purchase-orden-no-end/list-purchase-orden-no-end.component.html
@@ -1,4 +1,5 @@
 <div class="container" style="margin-top: 70px;">
+    <a class="btn btn-success" routerLink="/order-create">Crear orden</a>
     <table class="table table-hover">
       <thead>
         <tr>
@@ -22,7 +23,7 @@
           <td>
             <div class="btn-group" role="group" aria-label="Basic mixed styles example">
               <button type="button" class="btn btn-dark" (click)="finalizeOrder(order)">Finalizar</button>
-              <button type="button" class="btn btn-primary">Editar</button>
+              <button type="button" class="btn btn-primary" routerLink="/order-edit/{{order.id}}" >Editar</button>
               <button type="button" class="btn btn-success" (click)="selectOrder(order)">Ver detalle</button>
             </div>
           </td>
