--- a/src/app/detalles-orden/ver-detalle/ver-detalle.component.scss
+++ b/src/app/detalles-orden/ver-detalle/ver-detalle.component.scss
@@ -1,4 +1,4 @@
-table {
+/* table {
     width: 50% ;
     margin: auto;
     border-radius: .2rem;
@@ -16,4 +16,4 @@ table {
     background-color:rgb(198, 231, 241);
     padding: 5px;
     text-align: left;
-  }
+  } */
