--- a/src/app/proveedores/proveedor/update-proveedor/update-proveedor/update-proveedor.component.html
+++ b/src/app/proveedores/proveedor/update-proveedor/update-proveedor/update-proveedor.component.html
@@ -2,7 +2,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title">Registro de Proveedor</h5>
+              <h5 class="modal-title">Actualizar datos del proveedor</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -11,32 +11,32 @@
 
                       <div class="form-group">
                         <label for="inputName">Nombre</label>
-                        <input formControlName="name" name="name" type="text" class="form-control" id="inputName" placeholder="Nombre del proveedor">
+                        <input value="proveedor.name" formControlName="name" name="name" type="text" class="form-control" id="inputName" placeholder="Nombre del proveedor">
                       </div>
 
                       <div class="form-group col-md-6">
                         <label for="inputEmail4">Correo electrónico</label>
-                        <input formControlName="email" name="email" type="email" class="form-control" id="inputEmail" placeholder="Correo electrónico">
+                        <input value="{{proveedor.email}}" formControlName="email" name="email" type="email" class="form-control" id="inputEmail" placeholder="Correo electrónico">
                       </div>
 
                       <div class="form-group">
                         <label for="inputRubro">Rubro</label>
-                        <input formControlName="rubro" name="rubro" type="text" class="form-control" id="inputRubro" placeholder="Rubro">
+                        <input value="{{proveedor.rubro}}" formControlName="rubro" name="rubro" type="text" class="form-control" id="inputRubro" placeholder="Rubro">
                       </div>
 
                     <div class="form-group col-md-6">
                       <label for="inputAddress">Dirección</label>
-                      <input formControlName="direction" name="direction" type="text" class="form-control" id="inputAddress" placeholder="Dirección">
+                      <input value="{{proveedor.direction}}" formControlName="direction" name="direction" type="text" class="form-control" id="inputAddress" placeholder="Dirección">
                     </div>    
 
                     <div class="form-group">
                       <label for="inputPhone">Telefóno</label>
-                      <input formControlName="phone" name="phone" type="text" class="form-control" id="inputPhone" placeholder="Telefóno">
+                      <input value="{{proveedor.phone}}" formControlName="phone" name="phone" type="text" class="form-control" id="inputPhone" placeholder="Telefóno">
                     </div>
                     </div> 
                     
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+
                       <button type="submit" class="btn btn-primary">Enviar</button>
                     </div>
 
