--- a/src/app/proveedores/proveedor/list-proveedores/list-proveedores.component.html
+++ b/src/app/proveedores/proveedor/list-proveedores/list-proveedores.component.html
@@ -1,3 +1,5 @@
+<div class="container">
+  <a class="btn btn-success text-white mt-1" routerLink="/provider"  data-bs-toogle="modal"  data-bs-targe="modal-register">Registrar</a>
 <form class="container mt-4" >
 <table class="table table-striped">
     <thead>
@@ -26,3 +28,4 @@
     </tbody>
   </table>
 </form>
+</div>
