--- a/src/app/ordenes-compra/list-purchase-orden-no-end/list-purchase-orden-no-end.component.html
+++ b/src/app/ordenes-compra/list-purchase-orden-no-end/list-purchase-orden-no-end.component.html
@@ -1,5 +1,6 @@
 <div class="container" style="margin-top: 70px;">
-    <a class="btn btn-success" routerLink="/order-create">Crear orden</a>
+    <a class="btn btn-success m-3" routerLink="/order-create">Crear orden</a>
+    <a class="btn btn-success m-3" routerLink="/orderEnd-list">Ordenes finalizadas</a>
     <table class="table table-hover">
       <thead>
         <tr>
